// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsProfilePage should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Profile
        </h1>
      </div>
      <form>
        <div
          class="ec47sgk-el-mb11"
        >
          <div
            class="ee6e7by-el-form-layout"
          >
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="gitHubUsername"
                  placeholder="Github handles help us tracking issues"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  GitHub Username
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ec47sgk-el-mb11"
        >
          <div
            class="ee6e7by-el-form-layout"
          >
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Company Name
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              >
                MOCK_COMPANY
              </p>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Email Address
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              >
                example@email.com
              </p>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Profile Settings
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              />
            </div>
          </div>
        </div>
        <h2
          class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
        >
          Customer Data
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </p>
        <div
          class="ez8nkuq-el-mb6 ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <div
                class="ehi76vp-el-has-grey-bg ejhyjna-el-toggle-radio-wrap"
              />
              <label
                class="e1nbkkrq-el-label"
              >
                Choose Sandbox
              </label>
            </div>
          </div>
        </div>
        <div
          class="ec47sgk-el-mb11 epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
        >
          <div
            class="eta6kcl-el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="ej9yrfo-el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="e1geon40-el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </div>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="eh76izl-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
              type="submit"
            >
              Save Changes
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Profile
      </h1>
    </div>
    <form>
      <div
        class="ec47sgk-el-mb11"
      >
        <div
          class="ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Name
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Job Title
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="gitHubUsername"
                placeholder="Github handles help us tracking issues"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                GitHub Username
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11"
      >
        <div
          class="ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Company Name
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            >
              MOCK_COMPANY
            </p>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Email Address
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            >
              example@email.com
            </p>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Profile Settings
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            />
          </div>
        </div>
      </div>
      <h2
        class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
      >
        Customer Data
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </p>
      <div
        class="ez8nkuq-el-mb6 ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <div
              class="ehi76vp-el-has-grey-bg ejhyjna-el-toggle-radio-wrap"
            />
            <label
              class="e1nbkkrq-el-label"
            >
              Choose Sandbox
            </label>
          </div>
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </div>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="eh76izl-el-button-group-inner"
        >
          <button
            class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
            type="submit"
          >
            Save Changes
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsProfilePage should match snapshot for mobile view 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="ecbqyq6-el-snack-holder"
      />
      <div
        class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
      >
        <h1
          class="e1byern-el-title"
        >
          Profile
        </h1>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
          >
            <button
              class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
            >
              Controls
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </div>
      <form>
        <div
          class="ec47sgk-el-mb11"
        >
          <div
            class="ee6e7by-el-form-layout"
          >
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <div
                class="e1979rmu-el-input-group"
              >
                <input
                  class="e1urjlvd-el-input"
                  id="test-static-id"
                  name="gitHubUsername"
                  placeholder="Github handles help us tracking issues"
                />
                <label
                  class="e1nbkkrq-el-label"
                  for="test-static-id"
                >
                  GitHub Username
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ec47sgk-el-mb11"
        >
          <div
            class="ee6e7by-el-form-layout"
          >
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Company Name
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              >
                MOCK_COMPANY
              </p>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Email Address
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              >
                example@email.com
              </p>
            </div>
            <div
              class="e1ksxx4v-el-input-wrap"
            >
              <h2
                class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
              >
                Profile Settings
              </h2>
              <p
                class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
              />
            </div>
          </div>
        </div>
        <h2
          class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
        >
          Customer Data
        </h2>
        <p
          class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </p>
        <div
          class="ez8nkuq-el-mb6 ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <div
                class="ehi76vp-el-has-grey-bg ejhyjna-el-toggle-radio-wrap"
              />
              <label
                class="e1nbkkrq-el-label"
              >
                Choose Sandbox
              </label>
            </div>
          </div>
        </div>
        <div
          class="ec47sgk-el-mb11 epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
        >
          <div
            class="eta6kcl-el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="ej9yrfo-el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="e1geon40-el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </div>
        <div
          class="ebqwrow-el-button-group"
        >
          <div
            class="eh76izl-el-button-group-inner"
          >
            <button
              class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
              type="submit"
            >
              Save Changes
              <div
                class="e1q1vabn-el-button-loader"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <div
      class="ecbqyq6-el-snack-holder"
    />
    <div
      class="e1q0zwo9-el-flex-justify-between e2kmzjs-el-flex-container"
    >
      <h1
        class="e1byern-el-title"
      >
        Profile
      </h1>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="ej73pla-el-button-group-align-right eh76izl-el-button-group-inner"
        >
          <button
            class="e1ymtwpu-el-intent-low e1tqqdf9-el-button"
          >
            Controls
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </div>
    <form>
      <div
        class="ec47sgk-el-mb11"
      >
        <div
          class="ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Name
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                Job Title
              </label>
            </div>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <div
              class="e1979rmu-el-input-group"
            >
              <input
                class="e1urjlvd-el-input"
                id="test-static-id"
                name="gitHubUsername"
                placeholder="Github handles help us tracking issues"
              />
              <label
                class="e1nbkkrq-el-label"
                for="test-static-id"
              >
                GitHub Username
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11"
      >
        <div
          class="ee6e7by-el-form-layout"
        >
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Company Name
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            >
              MOCK_COMPANY
            </p>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Email Address
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            >
              example@email.com
            </p>
          </div>
          <div
            class="e1ksxx4v-el-input-wrap"
          >
            <h2
              class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
            >
              Profile Settings
            </h2>
            <p
              class="e11jaxfn-el-has-grey-text ewfctk4-el-has-no-margin e1wasvgh-el-body-text"
            />
          </div>
        </div>
      </div>
      <h2
        class="ewfctk4-el-has-no-margin e15ggth7-el-subtitle"
      >
        Customer Data
      </h2>
      <p
        class="e11jaxfn-el-has-grey-text e1wasvgh-el-body-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </p>
      <div
        class="ez8nkuq-el-mb6 ee6e7by-el-form-layout"
      >
        <div
          class="e1ksxx4v-el-input-wrap"
        >
          <div
            class="e1979rmu-el-input-group"
          >
            <div
              class="ehi76vp-el-has-grey-bg ejhyjna-el-toggle-radio-wrap"
            />
            <label
              class="e1nbkkrq-el-label"
            >
              Choose Sandbox
            </label>
          </div>
        </div>
      </div>
      <div
        class="ec47sgk-el-mb11 epibvz0-el-intent-secondary evmehgn-el-is-active e1qwk99x-el-pn-is-full-width e15e3rd4-el-pn-is-inline erhlo5n-el-persistent-notification"
      >
        <div
          class="eta6kcl-el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="ej9yrfo-el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="e1geon40-el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </div>
      <div
        class="ebqwrow-el-button-group"
      >
        <div
          class="eh76izl-el-button-group-inner"
        >
          <button
            class="ebee6r1-el-intent-primary e1tqqdf9-el-button"
            type="submit"
          >
            Save Changes
            <div
              class="e1q1vabn-el-button-loader"
            />
          </button>
        </div>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
